adicionada a condição na idade

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,19 +16,19 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/UserAge"
+        android:id="@+id/etUserAge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Qual é sua idade?"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/etUserName" />
 
     <Button
         android:id="@+id/btValidacao"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Validar!"
-        app:layout_constraintBottom_toBottomOf="@id/UserAge"
+        app:layout_constraintTop_toBottomOf="@id/etUserAge"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
